deployments/environments/local/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-trivago-local
  labels:
    otel-trivago/env: "local"
