deployments/environments/local/svc-reservation.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
spec:
  replicas: 2
  template:
    metadata:
      labels:
        otel-trivago/allow-ingress: "default"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: reservation
          volumeMounts:
            - mountPath: /configs
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: svc-reservation
            items:
              - key: reservations.yaml
                path: config.yaml
---
