deployments/environments/local/svc-room.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room
spec:
  replicas: 1
  template:
    metadata:
      labels:
        otel-trivago/allow-ingress: "default"
    spec:
      containers:
        - name: room
          volumeMounts:
            - mountPath: /configs
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: svc-room
            items:
              - key: rooms.yaml
                path: config.yaml
---
