deployments/environments/local/svc-stay.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stay
spec:
  replicas: 1
  template:
    metadata:
      labels:
        otel-trivago/allow-ingress: "default"
    spec:
      containers:
        - name: stay
          volumeMounts:
            - mountPath: /configs
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: svc-stay
            items:
              - key: stays.yaml
                path: config.yaml
---
