deployments/environments/local/svc-prom.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    otel-trivago/app: prometheus
spec:
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prometheus
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
---
